[package]
name = "a2-video-player"
version = "0.1.0"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable = { git = "https://github.com/LinusCDE/libremarkable.git", rev = "2e7c4b8" }